@@ -1,9 +1,16 @@
 package com.ninni.species.server.item;
 
-import com.ninni.species.registry.*;
 import com.ninni.species.mixin_util.AbstractArrowAccess;
+import com.ninni.species.registry.SpeciesEnchantments;
+import com.ninni.species.registry.SpeciesItems;
+import com.ninni.species.registry.SpeciesParticles;
+import com.ninni.species.registry.SpeciesSoundEvents;
 import net.minecraft.ChatFormatting;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.network.chat.Component;
@@ -18,24 +25,29 @@ import net.minecraft.world.entity.SlotAccess;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.projectile.AbstractArrow;
+import net.minecraft.world.entity.projectile.Projectile;
 import net.minecraft.world.inventory.ClickAction;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.inventory.tooltip.BundleTooltip;
 import net.minecraft.world.inventory.tooltip.TooltipComponent;
 import net.minecraft.world.item.*;
+import net.minecraft.world.item.component.BundleContents;
+import net.minecraft.world.item.component.ChargedProjectiles;
+import net.minecraft.world.item.component.CustomData;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
 import org.joml.Quaternionf;
 import org.joml.Vector3f;
 
+import javax.annotation.Nullable;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
 
-public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
-    public static final String TAG_ITEMS = "Items";
+public class CrankbowItem extends ProjectileWeaponItem {
     public static final String TAG_SHOTS_FIRED = "Speed";
     public static final String TAG_COOLDOWN = "Cooldown";
     public static final String TAG_USING = "IsUsing";
@@ -47,10 +59,12 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
     @Override
     public InteractionResultHolder<ItemStack> use(Level level, Player player, InteractionHand hand) {
         ItemStack stack = player.getItemInHand(hand);
-        if (stack.hasTag() && stack.getTag().contains(TAG_ITEMS)) {
-            CompoundTag tag = stack.getTag();
+        if (!stack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY).isEmpty()) {
+            CompoundTag tag = stack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
             tag.remove(TAG_SHOTS_FIRED);
             tag.remove(TAG_COOLDOWN);
+            CustomData.set(DataComponents.CUSTOM_DATA, stack, tag);
+
             player.startUsingItem(hand);
             return InteractionResultHolder.consume(stack);
         }
@@ -64,30 +78,33 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
             return;
         }
 
-        CompoundTag tag = stack.getOrCreateTag();
+        CompoundTag tag = stack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
 
         if (tag.contains(TAG_COOLDOWN)) {
             int cooldown = tag.getInt(TAG_COOLDOWN);
             if (cooldown > 0) tag.putInt(TAG_COOLDOWN, cooldown - 1);
         }
 
-        if (tag.contains(TAG_ITEMS)) {
+        var chargedProjectiles = stack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+        if (!chargedProjectiles.isEmpty()) {
             if (!tag.contains(TAG_COOLDOWN)) {
-                if (stack.getEnchantmentLevel(SpeciesEnchantments.QUICK_CRANK.get()) > 0) entity.playSound(SpeciesSoundEvents.CRANKBOW_PULL_QUICK.get());
+                if (stack.getEnchantmentLevel(level.registryAccess().lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.QUICK_CRANK)) > 0) entity.playSound(SpeciesSoundEvents.CRANKBOW_PULL_QUICK.get());
                 else entity.playSound(SpeciesSoundEvents.CRANKBOW_PULL.get());
-                tag.putInt(TAG_COOLDOWN, getShootingCooldown(stack));
+                tag.putInt(TAG_COOLDOWN, getShootingCooldown(stack, level.registryAccess()));
                 tag.putInt(TAG_SHOTS_FIRED, 0);
             } else {
                 if (tag.getInt(TAG_COOLDOWN) == 0) {
-                    if (stack.getEnchantmentLevel(SpeciesEnchantments.QUICK_CRANK.get()) > 0) entity.playSound(SpeciesSoundEvents.CRANKBOW_PULL_QUICK.get());
+                    if (stack.getEnchantmentLevel(level.registryAccess().lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.QUICK_CRANK)) > 0) entity.playSound(SpeciesSoundEvents.CRANKBOW_PULL_QUICK.get());
                     else entity.playSound(SpeciesSoundEvents.CRANKBOW_PULL.get());
-                    shoot(level, entity, entity.getUsedItemHand(), stack);
-                    tag.putInt(TAG_COOLDOWN, getShootingCooldown(stack));
+                    if (level instanceof ServerLevel serverLevel) {
+                        shoot(serverLevel, entity, entity.getUsedItemHand(), stack, chargedProjectiles.getItems(), 1f, 1f, false, null);
+                    }
+                    tag.putInt(TAG_COOLDOWN, getShootingCooldown(stack, level.registryAccess()));
                     int shotsFired = tag.getInt(TAG_SHOTS_FIRED);
                     if (shotsFired < 40) tag.putInt(TAG_SHOTS_FIRED, shotsFired + 1);
                 }
             }
-            if (!level.isClientSide) stack.getOrCreateTag().putBoolean(TAG_USING, true);
+            if (!level.isClientSide) tag.putBoolean(TAG_USING, true);
         } else {
             if (entity instanceof Player player) {
                 tag.remove(TAG_SHOTS_FIRED);
@@ -95,11 +112,13 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
                 player.stopUsingItem();
             }
         }
+
+        CustomData.set(DataComponents.CUSTOM_DATA, stack, tag);
     }
 
     @Override
     public void releaseUsing(ItemStack stack, Level level, LivingEntity livingEntity, int timeLeft) {
-        CompoundTag tag = stack.getOrCreateTag();
+        CompoundTag tag = stack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
         tag.remove(TAG_COOLDOWN);
 
         if (livingEntity instanceof Player player && tag.contains(TAG_SHOTS_FIRED)) {
@@ -118,66 +137,68 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
                 }
             }
             tag.remove(TAG_SHOTS_FIRED);
-            stack.removeTagKey(TAG_USING);
+            tag.remove(TAG_USING);
+            CustomData.set(DataComponents.CUSTOM_DATA, stack, tag);
         }
     }
 
-    private boolean shoot(Level level, LivingEntity entity, InteractionHand hand, ItemStack stack) {
-        CompoundTag tag = stack.getTag();
-        if (tag != null && tag.contains(TAG_ITEMS) && tag.contains(TAG_SHOTS_FIRED)) {
-            ListTag items = tag.getList(TAG_ITEMS, 10);
-            if (items.isEmpty()) return false;
+    protected void shoot(ServerLevel level, LivingEntity shooter, InteractionHand hand, ItemStack weapon, List<ItemStack> projectileItems, float originalVelocity, float inaccuracy, boolean isCrit, @Nullable LivingEntity target) {
+        CompoundTag tag = weapon.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
+        if (weapon.has(DataComponents.CUSTOM_DATA) && weapon.has(DataComponents.CHARGED_PROJECTILES) && tag.contains(TAG_SHOTS_FIRED)) {
+            var projectiles = weapon.get(DataComponents.CHARGED_PROJECTILES);
+            if (projectiles.isEmpty() || projectiles.getItems().isEmpty()) return;
 
-            ItemStack arrowStack = ItemStack.of(items.getCompound(0));
+            ItemStack arrowStack = projectiles.getItems().getFirst();
             int shotsFired = tag.getInt(TAG_SHOTS_FIRED);
             float v = shotsFired / 20f;
             float velocity = v + 1.15f;
 
             if (shotsFired % 5 == 0 && shotsFired != 0 && shotsFired <= 30) {
-                entity.playSound(SpeciesSoundEvents.CRANKBOW_SPEED.get(), 0.5F,v + 0.5F);
+                shooter.playSound(SpeciesSoundEvents.CRANKBOW_SPEED.get(), 0.5F,v + 0.5F);
             }
 
-            float spread = (2 + (getMaxSpeed(stack) - getShootingCooldown(stack)) / (float) getMaxSpeed(stack)) / 2f;
-            if (level instanceof ServerLevel serverLevel) {
-                for (int i = 0; i < spread * 10; i++) {
-                    serverLevel.sendParticles(
-                            SpeciesParticles.BEWEREAGER_SPEED.get(),
-                            entity.getRandomX(0.35D),
-                            entity.getY(0.35D) + entity.getRandom().nextFloat(),
-                            entity.getRandomZ(0.35D),
-                            1, 0.3, 0.3, 0.3, 1.0D
-                    );
-                }
+            float spread = (2 + (getMaxSpeed(weapon, level.registryAccess()) - getShootingCooldown(weapon, level.registryAccess())) / (float) getMaxSpeed(weapon, level.registryAccess())) / 2f;
+            for (int i = 0; i < spread * 10; i++) {
+                level.sendParticles(
+                        SpeciesParticles.BEWEREAGER_SPEED.get(),
+                        shooter.getRandomX(0.35D),
+                        shooter.getY(0.35D) + shooter.getRandom().nextFloat(),
+                        shooter.getRandomZ(0.35D),
+                        1, 0.3, 0.3, 0.3, 1.0D
+                );
             }
 
-            if (stack.getEnchantmentLevel(SpeciesEnchantments.SCATTERSHOT.get()) > 0) {
+            if (weapon.getEnchantmentLevel(level.registryAccess().lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.SCATTERSHOT)) > 0) {
                 if (shotsFired <= 10) {
                     float z = (v * -15) + 10;
-                    shootProjectile(level, entity, hand, stack, arrowStack, 1.0F, velocity, 1.0F, z, true);
-                    shootProjectile(level, entity, hand, stack, arrowStack, 1.0F, velocity, 1.0F, -z, true);
+                    shootProjectile(level, shooter, hand, weapon, arrowStack, 1.0F, velocity, 1.0F, z, true);
+                    shootProjectile(level, shooter, hand, weapon, arrowStack, 1.0F, velocity, 1.0F, -z, true);
                 }
 
                 if (shotsFired <= 5) {
                     float z = (v * -40) + 20;
-                    shootProjectile(level, entity, hand, stack, arrowStack, 1.0F, velocity,1.0F, z, true);
-                    shootProjectile(level, entity, hand, stack, arrowStack, 1.0F, velocity,1.0F, -z, true);
+                    shootProjectile(level, shooter, hand, weapon, arrowStack, 1.0F, velocity,1.0F, z, true);
+                    shootProjectile(level, shooter, hand, weapon, arrowStack, 1.0F, velocity,1.0F, -z, true);
                 }
             }
-            shootProjectile(level, entity, hand, stack, arrowStack, 1.0F, velocity,1.0F, 0, false);
-            return true;
+            shootProjectile(level, shooter, hand, weapon, arrowStack, 1.0F, velocity,1.0F, 0, false);
         }
-        return false;
     }
 
-    public static int getShootingCooldown(ItemStack stack) {
-        CompoundTag tag = stack.getTag();
-        if (tag != null && tag.contains(TAG_SHOTS_FIRED)) {
+    @Override
+    protected void shootProjectile(LivingEntity livingEntity, Projectile projectile, int i, float v, float v1, float v2, @Nullable LivingEntity livingEntity1) {
+
+    }
+
+    public static int getShootingCooldown(ItemStack stack, RegistryAccess access) {
+        CompoundTag tag = stack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
+        if (tag.contains(TAG_SHOTS_FIRED)) {
             int shots = tag.getInt(TAG_SHOTS_FIRED);
-            int level = stack.getEnchantmentLevel(SpeciesEnchantments.QUICK_CRANK.get());
+            int level = stack.getEnchantmentLevel(access.lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.QUICK_CRANK));
             int i = level == 0 ? 3 : Math.max(1, 4 - level);
 
-            int cooldown = getMinSpeed(stack);
-            if (shots == 0) cooldown = getMinSpeed(stack);
+            int cooldown = getMinSpeed(stack, access);
+            if (shots == 0) cooldown = getMinSpeed(stack, access);
             else if (shots <= 1) cooldown -= i;
             else if (shots <= 5) cooldown -= 2 * i;
             else if (shots <= 10) cooldown -= 5 * i;
@@ -185,21 +206,21 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
             else if (shots <= 30) cooldown -= 20 * i;
             else cooldown -= 30 * i;
 
-            return Math.max(getMaxSpeed(stack), Math.min(40, cooldown));
+            return Math.max(getMaxSpeed(stack, access), Math.min(40, cooldown));
         }
-        return getMinSpeed(stack);
+        return getMinSpeed(stack, access);
     }
 
-    public static int getMaxSpeed(ItemStack stack) {
-        return switch (stack.getEnchantmentLevel(SpeciesEnchantments.QUICK_CRANK.get())) {
+    public static int getMaxSpeed(ItemStack stack, RegistryAccess access) {
+        return switch (stack.getEnchantmentLevel(access.lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.QUICK_CRANK))) {
             case 1, 2 -> 6;
             case 3 -> 5;
             default -> 7;
         };
     }
 
-    public static int getMinSpeed(ItemStack stack) {
-        return switch (stack.getEnchantmentLevel(SpeciesEnchantments.QUICK_CRANK.get())) {
+    public static int getMinSpeed(ItemStack stack, RegistryAccess access) {
+        return switch (stack.getEnchantmentLevel(access.lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.QUICK_CRANK))) {
             case 1 -> 25;
             case 2 -> 20;
             case 3 -> 15;
@@ -207,8 +228,8 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
         };
     }
 
-    public static int getMaxWeight(ItemStack stack) {
-        return 128 + (stack.getEnchantmentLevel(SpeciesEnchantments.CAPACITY.get()) * 64);
+    public static int getMaxWeight(ItemStack stack, HolderLookup.Provider access) {
+        return 128 + (stack.getEnchantmentLevel(access.lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.CAPACITY)) * 64);
     }
 
     @Override
@@ -216,7 +237,7 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
         return 15;
     }
 
-    public int getUseDuration(ItemStack stack) {
+    public int getUseDuration(ItemStack stack, LivingEntity entity) {
         return 72000;
     }
 
@@ -225,7 +246,7 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
     private static void shootProjectile(Level level, LivingEntity livingEntity, InteractionHand hand, ItemStack stack, ItemStack stack1, float pitch, float x, float y, float z, boolean fromScattershot) {
         if (!level.isClientSide) {
             ArrowItem arrowitem = (ArrowItem)(stack1.getItem() instanceof ArrowItem ? stack1.getItem() : Items.ARROW);
-            AbstractArrow abstractarrow = arrowitem.createArrow(level, stack1, livingEntity);
+            AbstractArrow abstractarrow = arrowitem.createArrow(level, stack1, livingEntity, stack);
             if (abstractarrow instanceof AbstractArrowAccess access) access.setTgnoreImmunityFrame(true);
 
             Vec3 vec31 = livingEntity.getUpVector(1.0F);
@@ -241,7 +262,7 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
                 }
 
                 if (!flag1 && !player.getAbilities().instabuild) {
-                    int sparingLevel = stack.getEnchantmentLevel(SpeciesEnchantments.SPARING.get());
+                    int sparingLevel = stack.getEnchantmentLevel(level.registryAccess().lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(SpeciesEnchantments.SPARING));
                     int i = sparingLevel == 1 ? 10 : sparingLevel == 2 ? 5 : 3;
                     if (sparingLevel > 0 && level.random.nextInt(i) == 0) {
                         abstractarrow.pickup = AbstractArrow.Pickup.CREATIVE_ONLY;
@@ -255,7 +276,7 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
                 }
             }
 
-            stack.hurtAndBreak(1, livingEntity, (livingEntity1) -> livingEntity1.broadcastBreakEvent(hand));
+            stack.hurtAndBreak(1, livingEntity, livingEntity.getEquipmentSlotForItem(livingEntity.getItemInHand(hand)));
             level.addFreshEntity(abstractarrow);
         }
 
@@ -263,19 +284,19 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
 
 
     @Override
-    public boolean overrideStackedOnOther(ItemStack p_150733_, Slot p_150734_, ClickAction p_150735_, Player p_150736_) {
-        if (p_150733_.getCount() == 1 && p_150735_ == ClickAction.SECONDARY) {
-            ItemStack itemstack = p_150734_.getItem();
+    public boolean overrideStackedOnOther(ItemStack stack, Slot slot, ClickAction clickAction, Player player) {
+        if (stack.getCount() == 1 && clickAction == ClickAction.SECONDARY) {
+            ItemStack itemstack = slot.getItem();
             if (itemstack.isEmpty()) {
-                this.playRemoveOneSound(p_150736_);
-                removeOne(p_150733_).ifPresent((p_150740_) -> {
-                    add(p_150733_, p_150734_.safeInsert(p_150740_));
+                this.playRemoveOneSound(player);
+                removeOne(stack).ifPresent((p_150740_) -> {
+                    add(stack, slot.safeInsert(p_150740_), player.registryAccess());
                 });
             } else if (itemstack.getItem().canFitInsideContainerItems() && getAllSupportedProjectiles().test(itemstack)) {
-                int i = (getMaxWeight(p_150733_) - getContentWeight(p_150733_));
-                int j = add(p_150733_, p_150734_.safeTake(itemstack.getCount(), i, p_150736_));
+                int i = (getMaxWeight(stack, player.registryAccess()) - getContentWeight(stack));
+                int j = add(stack, slot.safeTake(itemstack.getCount(), i, player), player.registryAccess());
                 if (j > 0) {
-                    this.playInsertSound(p_150736_);
+                    this.playInsertSound(player);
                 }
             }
 
@@ -286,20 +307,20 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
     }
 
     @Override
-    public boolean overrideOtherStackedOnMe(ItemStack p_150742_, ItemStack added, Slot p_150744_, ClickAction p_150745_, Player p_150746_, SlotAccess p_150747_) {
+    public boolean overrideOtherStackedOnMe(ItemStack p_150742_, ItemStack added, Slot p_150744_, ClickAction p_150745_, Player player, SlotAccess p_150747_) {
         if (p_150742_.getCount() != 1) {
             return false;
-        } else if (p_150745_ == ClickAction.SECONDARY && p_150744_.allowModification(p_150746_)) {
+        } else if (p_150745_ == ClickAction.SECONDARY && p_150744_.allowModification(player)) {
             if (added.isEmpty()) {
                 removeOne(p_150742_).ifPresent((p_186347_) -> {
-                    this.playRemoveOneSound(p_150746_);
+                    this.playRemoveOneSound(player);
                     p_150747_.set(p_186347_);
                 });
             } else {
                 if (getAllSupportedProjectiles().test(added)) {
-                    int i = add(p_150742_, added);
+                    int i = add(p_150742_, added, player.registryAccess());
                     if (i > 0) {
-                        this.playInsertSound(p_150746_);
+                        this.playInsertSound(player);
                         added.shrink(i);
                     }
                 }
@@ -311,65 +332,58 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
         }
     }
 
-    public static int add(ItemStack stack, ItemStack stack1) {
-        if (!stack1.isEmpty() && stack1.getItem().canFitInsideContainerItems()) {
-            CompoundTag compoundtag = stack.getOrCreateTag();
-            if (!compoundtag.contains(TAG_ITEMS)) compoundtag.put(TAG_ITEMS, new ListTag());
+    public static int add(ItemStack weapon, ItemStack stack, RegistryAccess access) {
+        if (!stack.isEmpty() && stack.getItem().canFitInsideContainerItems()) {
+            var projectiles = weapon.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+            var itemList = new ArrayList<>(projectiles.getItems());
 
-            int i = getContentWeight(stack);
-            int k = Math.min(stack1.getCount(), getMaxWeight(stack) - i);
+            int i = getContentWeight(weapon);
+            int k = Math.min(stack.getCount(), getMaxWeight(weapon, access) - i);
 
             if (k == 0) return 0;
             else {
-                ListTag listtag = compoundtag.getList(TAG_ITEMS, 10);
-                Optional<CompoundTag> optional = getMatchingItem(stack1, listtag);
+                Optional<ItemStack> optional = getMatchingItem(stack, itemList);
                 if (optional.isPresent()) {
-                    CompoundTag compoundtag1 = optional.get();
-                    ItemStack itemstack = ItemStack.of(compoundtag1);
+                    ItemStack itemStack = optional.get();
 
-                    if (itemstack.getCount() + k > 64) {
-                        int i2 = itemstack.getCount() + k;
-                        itemstack.setCount(64);
-                        itemstack.save(compoundtag1);
-                        listtag.remove(compoundtag1);
-                        listtag.add(0, compoundtag1);
+                    if (itemStack.getCount() + k > 64) {
+                        int i2 = itemStack.getCount() + k;
+                        itemStack.setCount(64);
+                        itemList.remove(itemStack);
+                        itemList.addFirst(itemStack);
 
-                        ItemStack itemstack1 = stack1.copyWithCount(k);
-                        CompoundTag compoundtag2 = new CompoundTag();
-                        itemstack1.setCount(i2-64);
-                        itemstack1.save(compoundtag2);
-                        listtag.add(0, compoundtag2);
+                        ItemStack copiedItemStack = stack.copyWithCount(k);
+                        copiedItemStack.setCount(i2-64);
+                        itemList.addFirst(copiedItemStack);
                     } else {
-                        itemstack.grow(k);
-                        itemstack.save(compoundtag1);
-                        listtag.remove(compoundtag1);
-                        listtag.add(0, compoundtag1);
+                        itemStack.grow(k);
+                        itemList.remove(itemStack);
+                        itemList.addFirst(itemStack);
                     }
                 } else {
-                    ItemStack itemstack1 = stack1.copyWithCount(k);
-                    CompoundTag compoundtag2 = new CompoundTag();
-                    itemstack1.save(compoundtag2);
-                    listtag.add(0, compoundtag2);
+                    ItemStack copiedItemStack = stack.copyWithCount(k);
+                    itemList.addFirst(copiedItemStack);
                 }
+                weapon.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(itemList));
                 return k;
             }
         } else return 0;
     }
 
 
-    private static Optional<CompoundTag> getMatchingItem(ItemStack stack, ListTag tags) {
-        Optional var10000;
+    private static Optional<ItemStack> getMatchingItem(ItemStack stack, List<ItemStack> items) {
+        Optional<ItemStack> optional;
         if (stack.is(Items.BUNDLE)) {
-            var10000 = Optional.empty();
+            optional = Optional.empty();
         } else {
-            Stream var2 = tags.stream();
+            Stream<ItemStack> stream = items.stream();
             Objects.requireNonNull(CompoundTag.class);
-            var2 = var2.filter(CompoundTag.class::isInstance);
+            stream = stream.filter(CompoundTag.class::isInstance);
             Objects.requireNonNull(CompoundTag.class);
-            var10000 = var2.map(CompoundTag.class::cast).filter((itemStack) -> ItemStack.isSameItemSameTags(ItemStack.of((CompoundTag)itemStack), stack)).findFirst();
+            optional = stream.filter((itemStack) -> ItemStack.isSameItemSameComponents(itemStack, stack)).findFirst();
         }
 
-        return var10000;
+        return optional;
     }
 
     public static int getContentWeight(ItemStack itemStack2) {
@@ -377,18 +391,19 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
     }
 
     private static Optional<ItemStack> removeOne(ItemStack itemStack) {
-        CompoundTag compoundtag = itemStack.getOrCreateTag();
-        if (!compoundtag.contains(TAG_ITEMS)) {
+        var projectiles = itemStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+        if (projectiles.isEmpty()) {
             return Optional.empty();
         } else {
-            ListTag listtag = compoundtag.getList(TAG_ITEMS, 10);
-            if (listtag.isEmpty()) {
+            if (projectiles.getItems().isEmpty()) {
                 return Optional.empty();
             } else {
-                CompoundTag compoundtag1 = listtag.getCompound(0);
-                ItemStack itemstack = ItemStack.of(compoundtag1);
-                listtag.remove(0);
-                if (listtag.isEmpty()) itemStack.removeTagKey(TAG_ITEMS);
+                var itemList = new ArrayList<>(projectiles.getItems());
+
+                ItemStack itemstack = itemList.getFirst();
+                itemList.removeFirst();
+
+                itemStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(itemList));
                 return Optional.of(itemstack);
             }
         }
@@ -396,41 +411,39 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
 
 
     private static Optional<ItemStack> removeOneItem(ItemStack itemStack) {
-        CompoundTag compoundTag = itemStack.getOrCreateTag();
-        if (compoundTag.contains(TAG_ITEMS)) {
-            ListTag itemList = compoundTag.getList(TAG_ITEMS, 10);
-            if (!itemList.isEmpty()) {
-                CompoundTag itemTag = itemList.getCompound(0);
-                ItemStack itemStack2 = ItemStack.of(itemTag);
-                ItemStack itemStack3 = itemStack2.copyWithCount(itemStack2.getCount()-1);
+        var projectiles = itemStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+        if (!projectiles.isEmpty() && !projectiles.getItems().isEmpty()) {
+            var itemList = new ArrayList<>(projectiles.getItems());
+            ItemStack firstStack = itemList.getFirst();
 
-                CompoundTag itemTag3 = new CompoundTag();
-                itemStack3.save(itemTag3);
-
-                itemList.set(0, itemTag3);
-
-                if (itemStack2.getCount() == 1) {
-                    ItemStack itemStack1 = ItemStack.of(itemList.getCompound(1));
-                    if (itemStack1.isEmpty()) compoundTag.remove(TAG_ITEMS);
-                    itemList.remove(0);
-                    return Optional.empty();
+            if (firstStack.getCount() == 1) {
+                if (itemList.size() == 1) {
+                    itemList.clear();
                 }
-                return Optional.of(itemStack3);
+                else {
+                    itemList.removeFirst();
+                }
+                itemStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(itemList));
+                return Optional.empty();
             }
+
+            ItemStack reducedStack = firstStack.copyWithCount(firstStack.getCount()-1);
+            itemList.set(0, reducedStack);
+            itemStack.set(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.of(itemList));
+            return Optional.of(reducedStack);
         }
         return Optional.empty();
     }
 
     private static Stream<ItemStack> getContents(ItemStack itemStack) {
-        CompoundTag compoundTag = itemStack.getTag();
-        if (compoundTag == null) return Stream.empty();
-        ListTag listTag = compoundTag.getList(TAG_ITEMS, 10);
-        return listTag.stream().map(CompoundTag.class::cast).map(ItemStack::of);
+        var projectiles = itemStack.getOrDefault(DataComponents.CHARGED_PROJECTILES, ChargedProjectiles.EMPTY);
+        if (projectiles.isEmpty()) return Stream.empty();
+        return projectiles.getItems().stream();
     }
 
     @Override
     public void onDestroyed(ItemEntity itemEntity) {
-        ItemUtils.onContainerDestroyed(itemEntity, CrankbowItem.getContents(itemEntity.getItem()));
+        ItemUtils.onContainerDestroyed(itemEntity, CrankbowItem.getContents(itemEntity.getItem()).toList());
     }
 
     private void playRemoveOneSound(Entity entity) {
@@ -445,14 +458,14 @@ public class CrankbowItem extends ProjectileWeaponItem implements Vanishable {
     public Optional<TooltipComponent> getTooltipImage(ItemStack itemStack) {
         NonNullList<ItemStack> nonNullList = NonNullList.create();
         CrankbowItem.getContents(itemStack).forEach(nonNullList::add);
-        return Optional.of(new BundleTooltip(nonNullList, CrankbowItem.getContentWeight(itemStack)));
+        return Optional.of(new BundleTooltip(new BundleContents(nonNullList)));
     }
 
     @Override
-    public void appendHoverText(ItemStack itemStack, Level level, List<Component> list, TooltipFlag tooltipFlag) {
-        list.add(Component.translatable("item.species.crankbow.fullness", CrankbowItem.getContentWeight(itemStack), CrankbowItem.getMaxWeight(itemStack)).withStyle(ChatFormatting.GRAY));
+    public void appendHoverText(ItemStack itemStack, TooltipContext context, List<Component> list, TooltipFlag tooltipFlag) {
+        list.add(Component.translatable("item.species.crankbow.fullness", CrankbowItem.getContentWeight(itemStack), CrankbowItem.getMaxWeight(itemStack, context.registries())).withStyle(ChatFormatting.GRAY));
         list.add(Component.translatable("item.species.crankbow.desc").withStyle(Style.EMPTY.withColor(0x723548)));
-        super.appendHoverText(itemStack, level, list, tooltipFlag);
+        super.appendHoverText(itemStack, context, list, tooltipFlag);
     }
 
     @Override
